[B]0.0.8[/B] (2013-09-26)
  - Use the confluence scrollbars and separators.  They're much nicer.
  - Refactor the gui windows so that they share a base class.
  - Basic service handling from the gui: prompt for start if stopped, prompt for restart if out of date.
  - Have the housekeeper pull down episode lists when things are quiet.
  - Finally the facility to add new shows (albeit a bit hackish as of yet)
  - Be a bit smarter about accepting show names with a year on the end.
  - Ditto for shows with a country code at the end (using tvrage to check the origin_country)
  - Prettier context menu (stolen from globalsearch addon)
  - Put in a (somewhat ugly) icon for the 'ANY' quality

[B]0.0.7[/B] (2013-09-24)
  - Much better layout/ordering behaviour on downloads screen.
  - Blacklist downloads on failure (so they won't be tried again).  Blacklist entries expire after 1 week.
  - Improve the time formatting on the download screen a little
  - No longer any need for script.module.elementtree (we can now rely on having python 2.6 or 2.7)
  - Do a rudimentary check of transmission settings when they change.  Disable Transmission if they fail.
  - If transmission is running locally, "fix" the download location.  (this won't work for remote: Download Dir in addon
    and transmission must agree)
  - Hire a housekeeper: cleans up expired cache entries, and updates the scene exceptions, provided xbmc isn't playing.
  - Use "Episode N" for episodes that have no names on tvdb.

[B]0.0.6[/B] (2013-09-23)
  - Small bug in jsonrpc when creating exceptions.
  - New exception 'EpisodeNotFoundException' when querying for a tv episode that is no longer present.
  - Add a get_version method to the service. (returns a string like '0.0.6')
  - Have the gui call the get_version when it starts.  It no match, fail to start gui (with warning about restart needed)
  - Service can now be stopped by sending it a 'SHUTDOWN' message (just that text, nothing more). 